syntax = "proto3";

package sf.solana.transfer.v1;

message TransferOutput {
    repeated SystemTransfer transfers = 1;
}
message SystemTransfer {
    uint64 slot = 1;
    string tx_id = 2;
    uint32 instruction_index = 3;
    uint32 inner_instruction_index = 4;
    bool is_inner_instruction = 5;
    string from = 6;
    string to = 7;
    uint64 lamports = 8;
}